tests/data/motifs/bad/test_pfms_bad1.jaspar

MA0006.1	Ahr::Arnt
